--- a/build.gradle
+++ b/build.gradle
@@ -16,15 +16,15 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	maven { url 'https://maven.nucleoid.xyz' }
 }
 
 loom {
     splitEnvironmentSourceSets()
 
 	mods {
-		"modid" {
+		"warper" {
 			sourceSet sourceSets.main
-			sourceSet sourceSets.client
 		}
 	}
 
@@ -43,6 +43,9 @@ dependencies {
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
 
 	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
+	modImplementation include("eu.pb4:sgui:1.4.2+1.20.4")
+
+	implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 processResources {
